# GDIStreaming

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp
.github/workflows/: windows.yml
